@startuml 入库管理模块类图
skinparam linetype ortho
skinparam classAttributeIconSize 0
hide members
' Controller层
class InOrderController {
  - inOrderService: InOrderService
  + list(): AjaxResult
  + add(): AjaxResult
  + edit(): AjaxResult
  + remove(): AjaxResult
  + confirm(): AjaxResult
}

' Service层
interface InOrderService {
  + selectInOrderList(): List<StockInOrder>
  + insertInOrder(): int
  + updateInOrder(): int
  + deleteInOrder(): int
  + confirmInOrder(): int
}

class InOrderServiceImpl {
  - inOrderMapper: InOrderMapper
  - labelService: MatLabelService
  + selectInOrderList(): List<StockInOrder>
  + insertInOrder(): int
  + updateInOrder(): int
  + deleteInOrder(): int
  + confirmInOrder(): int
}

' 实体类
class StockInOrder {
  - orderId: Long
  - orderNo: String
  - orderType: String
  - warehouseCode: String
  - supplierCode: String
  - orderStatus: String
  - warehouseKeeper: String
  - delFlag: String
  - createBy: String
  - createTime: Date
}

class StockInDetail {
  - detailId: Long
  - orderNo: String
  - matCode: String
  - locationCode: String
  - planQuantity: BigDecimal
  - actualQuantity: BigDecimal
  - batchNo: String
}

class StockMatLabel {
  - labelId: Long
  - labelNo: String
  - warehouseCode: String
  - locationCode: String
  - matCode: String
  - batchNo: String
  - supplierCode: String
  - labelQuantity: BigDecimal
  - usableQuantity: BigDecimal
  - inOrderNo: String
  - inType: String
  - delFlag: String
}

class BaseMat {
  - matId: Long
  - matCode: String
  - matName: String
  - unit: String
}

class BaseWarehouse {
  - warehouseId: Long
  - warehouseCode: String
  - warehouseName: String
}

class BaseLocation {
  - locationId: Long
  - locationCode: String
  - locationName: String
  - warehouseCode: String
}

class BaseSupplier {
  - supplierId: Long
  - supplierCode: String
  - supplierName: String
}

' 关联关系
InOrderController --|> InOrderService : 依赖
InOrderService <|.. InOrderServiceImpl : 实现
InOrderServiceImpl --|> StockInOrder : 操作
StockInOrder --|> StockInDetail : 包含
StockInDetail --|> StockMatLabel : 生成
StockInOrder --|> BaseWarehouse : 关联
StockInOrder --|> BaseSupplier : 关联
StockInDetail --|> BaseMat : 关联
StockInDetail --|> BaseLocation : 关联
StockMatLabel --|> BaseMat : 关联

@enduml

